assets/css/style.css
*
{
	box-sizing: border-box;
}

body
{
	height: 100vh;
	margin: 0;
}

header 
{
	background-color:#ffffff;
	border-color: #cccccc;
	position: fixed;
	z-index: 500;
	width: 100%;
	top: 0;
	left: 0;
	height: 90px;
	border-bottom: solid #cccccc 2px;
}

.heading
{
	width: 960px;
	height: 88px;
	margin: 0px auto;
	font-family: 'Georgia', Times, Times New Roman, serif;.
}

.name
{
	background-color: #4aaaa5;
	position: absolute;
	z-index: 520;
	color: white;
	height: 88px;
	padding: 10px 40px 0px 40px;
	font-size: 20px;
}

li 
{
	display: inline;
}

a
{
	text-decoration: none;
	color: #777777;
}

a:visited
{
	color: #777777;
}

nav
{ 
	position: absolute;
	left: 930px;
	z-index: 520;
	top: 17px;
}

span
{
	color: #cccccc;
}

main, footer
{
	color: #777777;
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	background-color: #4aaaa5 ;
}



main
{
  background-image: url('../images/halftone.png');
  height: 100%;
  overflow: scroll;
}


.about, .contact, .portfolio
{
	background-color: #ffffff;
	border: solid #dddddd 1px;
	position: relative;
	width: 960px;
	margin: 0 auto;
	top: 130px;
	padding: 20px 30px;


}

.about h1 , .contact h1 , .portfolio h1
{
	color: #4aaaa5;
	font-size: 30px;
	font-family: 'Georgia', Times, Times New Roman, serif;
}




hr
{
	color: #cccccc;
	height: 3px;
	background-color: #cccccc;
	border: none;
}



.about img 
{
	width: 120px;
	height:160px;
	float: left;
	margin-right: 20px;
	margin-top: 20px;
}


p{
	line-height: 2;
	font-size: 18px;
	
}


p .nowrap
{
clear: both;
}




.contactform
{
	width: 100%;
}

.inputemail , .inputname , .message
{
	width: 100%;
}


input
{
	height: 30px;
}

input, textarea
{
	border: solid 1px #dddddd;
	margin-bottom: 15px;
	margin-top: 5px;
	color: #777777;
}

.submit
{
	background-color: #4aaaa5;
	color: white;
	font-size: 16px;
	height: 40px;
	width: 100px;

}
	
.portfolio
{
	height: 800px;
}

.box1, .box2, .box3, .box4, .box5
{
	width: 300px;
	height: 200px;
	float: left;
}

div .text
{
	position: relative;
	bottom: 50px;
	background-color: #4aaaa5;
	text-align: center;

	color: white;
	width: 200px;
	padding: 10px 0px;
	font-family: 'Georgia', Times, Times New Roman, serif;
	font-size: 16px;

}

footer 
{
	background-color: #666666;
	bottom: 0px;
	left: 0;
	width: 100%;
	padding: 20px;
	position: fixed;
	border-top: 7px solid #4aaaa5;
	text-align: center;
}

.copyright 
{
	position: relative;
	color: #cccccc;
	top: 15px;
	font-size: 11px;	
}

